# hpc-inference

./: .gitignore  404.html  README.md  README_wip.md  docs-requirements.txt  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api-reference/: index.html
configs/: config_embed_hdf5_template.yaml  config_embed_parquet_template.yaml  config_embed_template.yaml  config_face_detect_image_folder_template.yaml  config_face_detect_parquet_template.yaml
configs/OWLv2_detection/: config_owlv2_detect_image_folder_template.yaml  config_owlv2_detect_parquet_template.yaml
configs/animal_detection/: config_animal_detect_hdf5_template.yaml  config_animal_detect_image_folder_template.yaml  config_animal_detect_parquet_template.yaml
configs/embed/: config_embed_image_folder_template.yaml
configs/face_detection/: config_face_detect_hdf5_template.yaml  config_face_detect_image_folder_template.yaml
docs/: ImageFolderDataset_guide.ipynb  animal-detection-guide.md  api-reference.md  getting-started.md  imagefolder-guide.md  index.md  utilization-metrics.md  utilization_stat.md
docs/stylesheets/: extra.css
getting-started/: index.html
imagefolder-guide/: index.html
scripts/OWLv2_detection/: owlv2_detect_image_folder_template.slurm  owlv2_detect_parquet_template.slurm
scripts/animal_detection/: animal_detect_hdf5_template.slurm  animal_detect_image_folder_template.slurm  animal_detect_parquet_template.slurm
scripts/classify/: classify.slurm
scripts/conversion/: wds_to_hdf5.slurm
scripts/embed/: open_clip_embed_hdf5_template.slurm  open_clip_embed_image_folder_templates.slurm  open_clip_embed_parquet_template.slurm  open_clip_embed_template.slurm
scripts/face_detection/: face_detect_hdf5_template.slurm  face_detect_image_folder_template.slurm  face_detect_parquet_template.slurm
search/: search_index.json
src/: utils.py
src/datasets/: ParquetIterableDataset.py
src/hpc_inference/: __init__.py  analyze_grid_search.py
src/hpc_inference/datasets/: __init__.py  hdf5_dataset.py  image_folder_dataset.py  parquet_dataset.py
src/hpc_inference/inference/: __init__.py
src/hpc_inference/inference/classify/: classify.py  similarity.py
src/hpc_inference/inference/detection/: OWLv2_detect.py  __init__.py  animal_detect.py  animal_detector.py  base_detector.py  face_detect.py  face_detector.py
src/hpc_inference/inference/embed/: __init__.py  open_clip_embed.py
src/hpc_inference/inference/face_detection/: face_detect.py
src/hpc_inference/utils/: __init__.py  common.py  distributed.py  profiling.py  transforms.py  visualization.py  wds_to_hdf5.py
src/inference/embed/: open_clip_embed.py
tests/: README.md  final_verification.py  test_imports.py  test_imports_exports.py  test_package_structure.py  test_quick_imports.py
utilization-metrics/: index.html
utilization_stat/: index.html
