[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpc-inference"
dynamic = ["version"]
description = "High-performance computing solution for efficient batch inference on large-scale image datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Net Zhang", email = "zhang.11091@osu.edu" },
    { name = "Elizabeth G. Campolongo", email = "e.campolongo479@gmail.com" },
    { name = "Matthew J. Thompson", email = "thompson.m.j@outlook.com" }
]
keywords = [
    "machine-learning",
    "computer-vision", 
    "hpc",
    "batch-inference",
    "embeddings",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

# Core dependencies - includes datasets, utils, and profiling
dependencies = [
    "torch>=1.11.0",           # Needed for datasets (tensors)
    "torchvision>=0.12.0",     # Needed for transforms in datasets
    "pyarrow>=12.0.0",         # Needed for Parquet datasets
    "pandas>=1.5.0",           # Needed for Parquet processing
    "pillow>=9.0.0",           # Needed for image loading
    "pyyaml>=6.0",             # Needed for config loading
    "numpy>=1.21.0",           # Basic numpy operations
    "matplotlib>=3.5.0",       # Profiling plots and visualizations
    "psutil>=5.9.0",           # System resource monitoring
    "pynvml>=11.5.0",          # GPU monitoring and profiling
    "tqdm>=4.64.0",            # Progress bars for profiling
]

[project.optional-dependencies]
# OpenCLIP inference dependencies
openclip = [
    "open-clip-torch>=2.20.0",
]

# Future model dependencies

detection = [
    "ultralytics>=8.0.0"
]


# Combined inference extras
inference = [
    "hpc-inference[openclip]",  # Add other models as you create them
    "hpc-inference[detection]",
]

# All features
all = [
    "hpc-inference[inference]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Imageomics/hpc-inference"
Documentation = "https://imageomics.github.io/hpc-inference/"
Repository = "https://github.com/Imageomics/hpc-inference"
Changelog = "https://github.com/Imageomics/hpc-inference/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Imageomics/hpc-inference/issues"

[tool.hatch.version]
path = "src/hpc_inference/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hpc_inference"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests", 
    "/docs",
    "/scripts",
    "/configs",
    "/README.md",
    "/LICENSE",
]

# Development tools configuration
[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "F401"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=hpc_inference --cov-report=term-missing"

[tool.coverage.run]
source = ["src/hpc_inference"]
omit = ["*/tests/*"]